--- a/index.html
+++ b/index.html
@@ -197,7 +197,15 @@
                         <div class="row">
                             <div class="col-sm-12 xs-box">
                                 <div class="box-services-a">
-
+                                    <h3></h3>
+                                    <strong> a. Juara 1 Piala + Sertifikat + Uang Pembinaan Rp. 5.000.000,00
+                                        (lima juta rupiah)<br><br>
+                                        b. Juara 2 Piala + Sertifikat + Uang Pembinaan Rp. 3.000.000,00
+                                        (tiga juta rupiah)<br><br>
+                                        c. Juara 3 Piala + Sertifikat + Uang Pembinaan Rp. 2.000.000,00
+                                        (dua juta rupiah)<br><br>
+                                        d. Best Speaker Sertifikat + Uang Pembinaan Rp. 500.000,00
+                                        (lima ratus ribu rupiah)</strong>
                                 </div>
                             </div>
 
