minor changes, fix links

--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
                 <div class="container">
                     <!--Logo-->
                     <div id="logo">
-                        <a href="index.html" class="logo" data-dark-logo="images/logos-dark.png">
+                        <a href="#slider" class="logo" data-dark-logo="images/logos-dark.png">
                             <img src="images/logos.png" alt="Polo Logo">
                         </a>
                     </div>
                     <!--End: Logo-->
                     <!--Top Search Form-->
-                    <div id="top-search">
+                    <!-- <div id="top-search">
                         <form action="search-results-page.html" method="get">
                             <input type="text" name="q" class="form-control" value=""
                                 placeholder="Start typing & press  &quot;Enter&quot;">
                         </form>
-                    </div>
+                    </div> -->
                     <!--end: Top Search Form-->
 
 
@@ -63,7 +63,8 @@
                                     <li><a href="#Marvelaw">About</a></li>
                                     <li><a href="#lomba">Daftar Lomba</a></li>
                                     <li><a href="#seminar">Seminar Nasional</a></li>
-                                    <li><a style="color:white ;" href="#" class="btn btn-red">DAFTAR SEKARANG</a></li>
+                                    <li><a style="color:white !important;" href="#lomba" class="btn btn-red">DAFTAR
+                                            SEKARANG</a></li>
                                 </ul>
                             </nav>
                         </div>
@@ -80,7 +81,8 @@
             <div id="particles-js" class="particles"></div>
             <div class="container">
                 <div data-animation="fadeInUp" class="text-center">
-                    <div class="text-large">MARVE<span style="color: red;">LAW</span> UNNES COMPETITION 3.0</div>
+                    <div class="text-large">MARVE<span style="color: #ca0027 !important;">LAW</span> UNNES COMPETITION
+                        3.0</div>
                     <div class="text-medium"></div>
                 </div>
 
@@ -97,7 +99,7 @@
 
                     </p>
                     <br>
-                    <a href="#DaftarLomba" class="btn btn-red">DAFTAR SEKARANG</a>
+                    <a href="#lomba" class="btn btn-red">DAFTAR SEKARANG</a>
                 </div>
             </div>
 
@@ -422,9 +424,9 @@
                                 <ul class="list-icon list-icon-arrow">
                                     <li><a href="#slider">Home</a></li>
                                     <li><a href="#Marvelaw">About</a></li>
-                                    <li><a href="#DaftarLomba">Daftar Lomba</a></li>
-                                    <li><a href="#section4">Seminar Nasional</a></li>
-                                    <li><a href="#section4" style="color: white !important;" class="btn btn-red">DAFTAR
+                                    <li><a href="#lomba">Daftar Lomba</a></li>
+                                    <li><a href="#seminar">Seminar Nasional</a></li>
+                                    <li><a href="#lomba" style="color: white !important;" class="btn btn-red">DAFTAR
                                             SEKARANG</a></li>
                                 </ul>
                             </div>
