--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     </div>
                     <div class="modal-footer">
                         <!-- <button data-dismiss="modal" class="btn btn-b, text-center" type="button">Close</button> -->
-                        <a href="https://bit.ly/DebatHukumNasionalMarvelaw" class="btn btn-red">DAFTAR SEKARANG</a>
+                        <a href="https://linktr.ee/marvelaw2021" class="btn btn-red">DAFTAR SEKARANG</a>
                         <br>
                     </div>
                 </div>
@@ -267,7 +267,7 @@
                     </div>
                     <div class="modal-footer">
                         <!-- <button data-dismiss="modal" class="btn btn-b, text-center" type="button">Close</button> -->
-                        <a href="https://bit.ly/LegalOpinionMarvelaw" class="btn btn-red">DAFTAR SEKARANG</a>
+                        <a href="https://linktr.ee/marvelaw" class="btn btn-red">DAFTAR SEKARANG</a>
 
                     </div>
                 </div>
@@ -364,9 +364,128 @@
         </section> -->
         <!-- end: Call to action -->
 
-        <!-- PORTFOLIO -->
+        <section>
+            <div data-animation-delay="600" data-animation="fadeInUp" class="text-center" class="container">
 
-        <!-- end: PORTFOLIO -->
+            
+                <!--Gallery Carousel -->
+                <div class="heading">
+                    <h2>GALERI KEGIATAN</h2>
+                </div>
+                <div class="hr-title hr-long center"><abbr>Marvelaw Unnes Competition</abbr> </div>
+                <div class="carousel" data-lightbox="gallery" data-margin="20">
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/galeri/63.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a  data-lightbox="image" href="images/galeri/63.jpg" class="btn btn-light btn-rounded">Zoom</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/galeri/64.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a  data-lightbox="image" href="images/galeri/64.jpg" class="btn btn-light btn-rounded">Zoom</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/galeri/65.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a  data-lightbox="image" href="images/galeri/65.jpg" class="btn btn-light btn-rounded">Zoom</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/galeri/66.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a  data-lightbox="image" href="images/galeri/66.jpg" class="btn btn-light btn-rounded">Zoom</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/galeri/67.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a  data-lightbox="image" href="images/galeri/67.jpg" class="btn btn-light btn-rounded">Zoom</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                    <!-- portfolio item -->
+                    <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/galeri/68.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a  data-lightbox="image" href="images/galeri/68.jpg" class="btn btn-light btn-rounded">Zoom</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                     <!-- portfolio item -->
+                     <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/galeri/69.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a  data-lightbox="image" href="images/galeri/69.jpg" class="btn btn-light btn-rounded">Zoom</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                     <!-- portfolio item -->
+                     <div class="portfolio-item img-zoom pf-illustrations pf-media pf-icons pf-Media">
+                        <div class="portfolio-item-wrap">
+                            <div class="portfolio-image">
+                                <a href="#"><img src="images/galeri/70.jpg" alt=""></a>
+                            </div>
+                            <div class="portfolio-description">
+                                <a  data-lightbox="image" href="images/galeri/70.jpg" class="btn btn-light btn-rounded">Zoom</a>
+
+                            </div>
+                        </div>
+                    </div>
+                    <!-- end: portfolio item -->
+                </div>
+                <hr class="space">
+                <!--Gallery Carousel -->
+
+                
+
+            </div>
+        </section>
 
         <!-- Services -->
 
